Stage 2 of migration
